@@ -77,6 +77,70 @@ val collection = sc.parallelize(Seq(WordCount("dog", 50), WordCount("cow", 60)))
 collection.saveToCassandra("test", "words2", SomeColumns("word", "num" as "count"))
 ```
 
+## Modifying CQL Collections
+The default behavior of the Spark Cassandra Connector is to overwrite collections when inserted into
+a cassandra table. To override this behavior you can specify a custom mapper with instructions on
+how you would like the collection to be treated.
+
+The following operations are supported
+
+- append/add  (lists, sets, maps)
+- prepend (lists)
+- remove  (lists, sets)
+- overwrite (lists, sets, maps) :: Default
+
+Remove is not supported for Maps.
+
+These are applied by adding the desired behavior to the ColumnSelector
+
+Example Usage
+
+Takes the elements from rddSetField and removes them from corrosponding C* column
+"a_set" and takes elements from "rddMapField" and adds them to C* column "a_map" where C*
+column key == key in the RDD elements. 
+   
+    ("key", "a_set" as "rddSetField" remove , "a_map" as "rddMapField" as append)
+
+
+Example Schema
+
+```sql
+CREATE TABLE ks.collections_mod (
+      key int PRIMARY KEY,
+      lcol list<text>,
+      mcol map<text, text>,
+      scol set<text>
+  )
+```
+
+Example Appending/Prepending Lists
+
+```scala
+val listElements = sc.parallelize(Seq(
+  (1,Vector("One")),
+  (1,Vector("Two")),
+  (1,Vector("Three"))))
+
+val prependElements = sc.parallelize(Seq(
+  (1,Vector("PrependOne")),
+  (1,Vector("PrependTwo")),
+  (1,Vector("PrependThree"))))
+
+listElements.saveToCassandra("ks", "collections_mod", SomeColumns("key", "lcol" append))
+prependElements.saveToCassandra("ks", "collections_mod", SomeColumns("key", "lcol" prepend))
+```
+
+```sql
+cqlsh> Select * from ks.collections_mod where key = 1
+   ... ;
+
+ key | lcol                                                                | mcol | scol
+-----+---------------------------------------------------------------------+------+------
+   1 | ['PrependThree', 'PrependTwo', 'PrependOne', 'One', 'Two', 'Three'] | null | null
+
+(1 rows)
+```
+
 ## Saving objects of Cassandra User Defined Types
 To save structures consisting of many fields, use `com.datastax.spark.connector.UDTValue`
 class. An instance of this class can be easily obtained from a Scala `Map` by calling `fromMap`
