@@ -2,6 +2,7 @@ package com.datastax.spark.connector.writer
 
 import java.io.IOException
 
+import com.datastax.spark.connector.types.{MapType, ListType, ColumnType}
 import org.apache.spark.metrics.OutputMetricsUpdater
 
 import com.datastax.driver.core.BatchStatement.Type
@@ -21,6 +22,7 @@ import scala.collection._
 class TableWriter[T] private (
     connector: CassandraConnector,
     tableDef: TableDef,
+    columnSelector: IndexedSeq[ColumnRef],
     rowWriter: RowWriter[T],
     writeConf: WriteConf) extends Serializable with Logging {
 
@@ -67,8 +69,22 @@ class TableWriter[T] private (
     val (primaryKey, regularColumns) = columns.partition(_.isPrimaryKeyColumn)
     val (counterColumns, nonCounterColumns) = regularColumns.partition(_.isCounterColumn)
 
+    val nameToBehvaior = columnSelector collect {
+        case cn:CollectionColumnName => cn.columnName -> cn.collectionBehavior
+      } toMap
+
+    val setNonCounterColumnsClause = for { colDef <- nonCounterColumns
+      name = colDef.columnName
+      collectionBehavior = nameToBehvaior.get(name)
+      quotedName = quote(name)
+    } yield collectionBehavior match {
+        case Some(CollectionAppend)           => s"$quotedName = $quotedName + :$quotedName"
+        case Some(CollectionPrepend)          => s"$quotedName = :$quotedName + $quotedName"
+        case Some(CollectionRemove)           => s"$quotedName = $quotedName - :$quotedName"
+        case Some(CollectionOverwrite) | None => s"$quotedName = :$quotedName"
+      }
+
     def quotedColumnNames(columns: Seq[ColumnDef]) = columns.map(_.columnName).map(quote)
-    val setNonCounterColumnsClause = quotedColumnNames(nonCounterColumns).map(c => s"$c = :$c")
     val setCounterColumnsClause = quotedColumnNames(counterColumns).map(c => s"$c = $c + :$c")
     val setClause = (setNonCounterColumnsClause ++ setCounterColumnsClause).mkString(", ")
     val whereClause = quotedColumnNames(primaryKey).map(c => s"$c = :$c").mkString(" AND ")
@@ -79,8 +95,11 @@ class TableWriter[T] private (
   private val isCounterUpdate =
     tableDef.columns.exists(_.isCounterColumn)
 
+  private val containsCollectionBehaviors =
+    columnSelector.collect{ case cn:CollectionColumnName => cn }.nonEmpty
+
   private val queryTemplate: String = {
-    if (isCounterUpdate)
+    if (isCounterUpdate || containsCollectionBehaviors)
       queryTemplateUsingUpdate
     else
       queryTemplateUsingInsert
@@ -151,9 +170,11 @@ class TableWriter[T] private (
 
 object TableWriter {
 
-  private def checkColumns(table: TableDef, columnNames: Seq[String]) = {
+  private def checkColumns(table: TableDef, columnRefs: IndexedSeq[ColumnRef]) = {
+    val columnNames = columnRefs.map(_.columnName)
     checkMissingColumns(table, columnNames)
     checkMissingPrimaryKeyColumns(table, columnNames)
+    checkCollectionBehaviors(table, columnRefs)
   }
 
   private def checkMissingColumns(table: TableDef, columnNames: Seq[String]) {
@@ -172,6 +193,63 @@ object TableWriter {
         s"Some primary key columns are missing in RDD or have not been selected: ${missingPrimaryKeyColumns.mkString(", ")}")
   }
 
+  /**
+   * Check whether a collection behavior is being applied to a non collection column
+   * Check whether prepend is used on any Sets or Maps
+   * Check whether remove is used on Maps
+   */
+  private def checkCollectionBehaviors(table: TableDef, columnRefs: IndexedSeq[ColumnRef]) {
+    val tableCollectionColumns = table.columns.filter( cd => cd.isCollection)
+    val tableCollectionColumnNames = tableCollectionColumns.map(_.columnName)
+    val tableListColumnNames = tableCollectionColumns
+      .map( c => (c.columnName, c.columnType))
+      .collect{ case (name, x:ListType[_]) => name}
+
+    val tableMapColumnNames = tableCollectionColumns
+      .map( c => (c.columnName, c.columnType))
+      .collect{ case (name, x:MapType[_,_]) => name}
+
+    val refsWithCollectionBehavior = columnRefs collect {
+      case columnName: CollectionColumnName => columnName
+    }
+
+    val collectionBehaviorColumnNames =  refsWithCollectionBehavior.map(_.columnName)
+
+    //Check for non-collection columns with a collection Behavior
+    val collectionBehaviorNormalColumn =
+      collectionBehaviorColumnNames.toSet -- tableCollectionColumnNames.toSet
+
+    if (collectionBehaviorNormalColumn.nonEmpty)
+      throw new IllegalArgumentException(
+      s"""Collection behaviors (add/remove/append/prepend) are only allowed on collection columns.
+         |Normal Columns with illegal behavior: ${collectionBehaviorNormalColumn.mkString}""".stripMargin
+      )
+
+    //Check that prepend is used only on lists
+    val prependBehaviorColumnNames = refsWithCollectionBehavior
+      .filter(_.collectionBehavior == CollectionPrepend)
+      .map(_.columnName)
+    val prependOnNonList = prependBehaviorColumnNames.toSet -- tableListColumnNames.toSet
+
+    if (prependOnNonList.nonEmpty)
+      throw new IllegalArgumentException(
+      s"""The prepend collection behavior only applies to Lists. Prepend used on: ${prependOnNonList.mkString}"""
+      )
+
+    //Check that remove is not used on Maps
+
+    val removeBehaviorColumnNames = refsWithCollectionBehavior
+      .filter(_.collectionBehavior == CollectionRemove)
+      .map(_.columnName)
+
+    val removeOnMap = removeBehaviorColumnNames.toSet & tableMapColumnNames.toSet
+
+    if (removeOnMap.nonEmpty)
+      throw new IllegalArgumentException(
+      s"The remove operation is currently not supported for Maps. Remove used on: ${removeOnMap.mkString}"
+      )
+  }
+
   def apply[T : RowWriterFactory](
       connector: CassandraConnector,
       keyspaceName: String,
@@ -188,7 +266,7 @@ object TableWriter {
       tableDef.copy(regularColumns = tableDef.regularColumns ++ optionColumns),
       selectedColumns ++ optionColumns.map(_.ref))
     
-    checkColumns(tableDef, selectedColumns.map(_.columnName))
-    new TableWriter[T](connector, tableDef, rowWriter, writeConf)
+    checkColumns(tableDef, selectedColumns)
+    new TableWriter[T](connector, tableDef, selectedColumns, rowWriter, writeConf)
   }
 }
